--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
 		<meta charset="utf-8">
         <title>Same Name Confusion</title>
+        <link rel="icon" type="image/png" href="images/favicon.png">
         <link href="style.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
