--- a/404.html
+++ b/404.html
@@ -147,7 +147,7 @@
                 <img class="landscape" src="assets/images/bts-1.jpg">
             </div>
             <div class="image-wrapper">
-                <img class="landscape" src="assets/images/bts-2.JPG">
+                <img class="landscape" src="assets/images/bts-2.jpg">
             </div>
         </div>
         
