--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         
         <h3 class="pull-quote">
-            I find those days really wonderful. When Justmyselfthanksland lives up to its name and provides it’s one permanent resident with just enough personal space.
+            I find those days really wonderful. When Justmyselfthanksland lives up to its name and provides its one permanent resident with just enough personal space.
         </h3>    
         
         <p class="para">
