--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </p>
         
         <p class="para">
-            The true mechanics of it all are obviously so far beyond me so I let it slide. Don’t sweat the small stuff right? I trust that the universe will continue to work tirelessly through the night. To ensure that all the small stuff is in perfect order for when I start living again. I guess I owe the the universe an arm and a leg for the way it takes care of me like that.
+            The true mechanics of it all are obviously so far beyond me so I let it slide. Don’t sweat the small stuff right? I trust that the universe will continue to work tirelessly through the night. To ensure that all the small stuff is in perfect order for when I start living again. I guess I owe the universe an arm and a leg for the way it takes care of me like that.
         </p>
         
         <div class="image-section">
