--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         
         <h3 class="pull-quote">
-            There are certain places where people think they can make a mockery of my border defences. Like the train station at 5pm, oh what a horrible place.
+            There are certain places where people think they can make a mockery of my border defences. Like the train station at 5pm; oh what a horrible place.
         </h3> 
         
         <p class="para">
