--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="content-language" content="en"/>
-    <meta name="description" content="Debut EP ‘In Theory’ out January 11">
+    <meta name="description" content="">
     <meta name="author" content="Alfred Hoi">
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
