--- a/presskit.html
+++ b/presskit.html
@@ -95,9 +95,9 @@
     </div>
         <div class="links">
         <p>Contact Details<br><br>
-            Luke Courtney<br>
-            <a href="mailto:samenameconfusion@gmail.com?Subject=Hi!">Samenameconfusion@gmail.com</a><br>
-            <a href="tel:+64278741805">+64 27 874 1805</a>
+            Manu Taylor<br>
+            <a href="mailto:manu@45rpm.co.nz?Subject=Same Name Confusion">Manu@45rpm.co.nz</a><br>
+            <a href="tel:+6421929401">+64 21 929 401</a>
         </p>
         <p>Social Links<br><br>
             <a target="_blank" href="https://www.instagram.com/samenameconfusion/">Instagram</a><br> 
